[gd_scene load_steps=21 format=3 uid="uid://fvflaq7sw8v5"]

[ext_resource type="Script" uid="uid://cpkg33td4evke" path="res://scenes/machine/pointer_creator.gd" id="1_g2ine"]
[ext_resource type="Texture2D" uid="uid://cuusn7an5qj6b" path="res://sprites/interactables/cutting_machine.png" id="2_dkw2c"]
[ext_resource type="Script" uid="uid://j6h2whbyd5k0" path="res://scipts/interact.gd" id="3_uugj4"]
[ext_resource type="PackedScene" uid="uid://chs8kg0ynxhi4" path="res://ui/loading_bar.tscn" id="4_dkw2c"]
[ext_resource type="AudioStream" uid="uid://boqlpqhqn2hnx" path="res://sounds/1033_coffee-grinder-02.wav" id="6_4wqcb"]
[ext_resource type="Texture2D" uid="uid://dybwmu73i6fea" path="res://sprites/interactables/cutting_machine_animated-Sheet.png" id="6_stsae"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xjn0a"]
size = Vector2(52, 79)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jnwoo"]
size = Vector2(26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_uugj4"]
atlas = ExtResource("2_dkw2c")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wqcb"]
atlas = ExtResource("6_stsae")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_stsae"]
atlas = ExtResource("6_stsae")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cide"]
atlas = ExtResource("6_stsae")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_32ty0"]
atlas = ExtResource("6_stsae")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jrfl"]
atlas = ExtResource("6_stsae")
region = Rect2(128, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_and07"]
atlas = ExtResource("6_stsae")
region = Rect2(160, 0, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_0gieh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uugj4")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wqcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stsae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cide")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32ty0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jrfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_and07")
}],
"loop": true,
"name": &"working",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_6cide"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-20.0]
}

[sub_resource type="Animation" id="Animation_stsae"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-20.0, 0.0]
}

[sub_resource type="Animation" id="Animation_32ty0"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -30.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7jrfl"]
_data = {
&"RESET": SubResource("Animation_6cide"),
&"fade_in": SubResource("Animation_stsae"),
&"fade_out": SubResource("Animation_32ty0")
}

[node name="Pointer_creator" type="StaticBody2D"]
y_sort_enabled = true
script = ExtResource("1_g2ine")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
y_sort_enabled = true
texture = ExtResource("2_dkw2c")

[node name="InteractionArea" type="Area2D" parent="."]
script = ExtResource("3_uugj4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(-3, 1.5)
shape = SubResource("RectangleShape2D_xjn0a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 0)
shape = SubResource("RectangleShape2D_jnwoo")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Finish_position" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Loading_bar" parent="." instance=ExtResource("4_dkw2c")]
y_sort_enabled = true
offset_left = -16.0
offset_top = -53.0
offset_right = -16.0
offset_bottom = -53.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -32)
sprite_frames = SubResource("SpriteFrames_0gieh")
animation = &"idle"
offset = Vector2(0, 32)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_4wqcb")
volume_db = -20.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="AudioStreamPlayer2D"]
libraries = {
&"": SubResource("AnimationLibrary_7jrfl")
}

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AudioStreamPlayer2D/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
